--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "ipfs-core": "^0.10.8",
+    "ipfs-http-client": "^52.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "semantic-ui-react": "^2.0.4",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
