--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "dev": "REACT_APP_NEXT_PUBLIC_API_MOCKING=enabled yarn start",
     "build": "react-scripts build",
     "test": "react-scripts test --transformIgnorePatterns \"node_modules/(?!@polkadot/api/allow-react)/\" --env=jsdom",
     "eject": "react-scripts eject"
