--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "dev": "REACT_APP_NEXT_PUBLIC_API_MOCKING=enabled yarn start",
     "build": "react-scripts build",
     "test": "react-scripts test --transformIgnorePatterns \"node_modules/(?!@polkadot/api/allow-react)/\" --env=jsdom",
+    "local": "REACT_APP_LOCAL=enabled yarn start",
+    "local:mock": "REACT_APP_LOCAL=enabled REACT_APP_NEXT_PUBLIC_API_MOCKING=enabled yarn start",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
