--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,15 @@
 .env.test.local
 .env.production.local
 
+# Yarn 3 files
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
