--- a/.github/workflows/integration_test.yml
+++ b/.github/workflows/integration_test.yml
@@ -17,23 +17,8 @@ jobs:
       - name: Run yarn install
         run: yarn install
 
-      - name: Download encointer-node
-        uses: dawidd6/action-download-artifact@v2
-        with:
-          github_token: ${{secrets.GITHUB_TOKEN}}
-          workflow: build-and-test.yml
-          name: executables
-          # in fact this action should download the latest artifact, but sometimes fails. Then we need to
-          # set the `run_id` to force a download of an updated binary.
-          run_id: 1877299183
-          path: node
-          repo: encointer/encointer-node
-
       - name: Run encointer-node
-        run: |
-          ls -alt node
-          chmod +x node/encointer-node-notee
-          ./node/encointer-node-notee --tmp --dev --enable-offchain-indexing true --rpc-methods unsafe &
+        run: ./scripts/docker_run_encointer_node_notee.sh &
 
       - name: Run integration tests
         run: yarn test
