--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.2.0",
   "private": true,
   "dependencies": {
-    "@encointer/node-api": "^0.9.0-alpha.3",
-    "@encointer/util": "^0.9.0-alpha.3",
-    "@encointer/worker-api": "^0.9.0-alpha.3",
+    "@encointer/node-api": "^0.10.0",
+    "@encointer/util": "^0.10.0",
+    "@encointer/worker-api": "^0.10.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
