--- a/package.json
+++ b/package.json
@@ -12,22 +12,27 @@
     "@types/node": "^24.5.2",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
+    "jest-resolve": "^30.1.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-scripts": "5.0.1",
     "semantic-ui-react": "^2.1.5",
-    "typescript": "^4.5.5",
-    "web-vitals": "^2.1.4"
+    "typescript": "^5.9.2",
+    "web-vitals": "^5.1.0"
   },
   "devDependencies": {
     "@polkadot/dev": "^0.83.3",
-    "@polkadot/x-textdecoder": "^13.5.4",
-    "@polkadot/x-textencoder": "^13.5.4"
+    "@polkadot/types": "^16.4.3",
+    "@types/jest": "^30.0.0",
+    "jest": "^30.1.3",
+    "jest-ts-webcompat-resolver": "^1.0.1",
+    "ts-jest": "^29.4.4",
+    "ts-node": "^10.9.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "ts-node node_modules/jest/bin/jest.js",
     "local": "REACT_APP_LOCAL=enabled yarn start",
     "local:mock": "REACT_APP_LOCAL=enabled REACT_APP_MOCKING=enabled yarn start",
     "local-chain-remote-ipfs": "REACT_APP_LOCAL_CHAIN_REMOTE_IPFS=enabled yarn start",
@@ -51,11 +56,6 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
-    ]
-  },
-  "jest": {
-    "transformIgnorePatterns": [
-      "node_modules/(?!(?:@polkadot|@encointer)/)"
     ]
   }
 }
