Fix integration tests and enable linter (#23)
* work with polkadot dev js config

* add jest.config.js

* try fix integration tests

* update react deps

* test suite starts

* test suite starts

* fix integration tests

* current integration tests run without local node

* remove pollyfils from setupTests

* delete setupTests as we use the ts-node runner now

* fix ts-lint afters ts update

* fix lint

* fix lint 2

--- a/package.json
+++ b/package.json
@@ -16,13 +16,22 @@
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "semantic-ui-react": "^2.1.2",
-    "typescript": "^4.5.5",
+    "typescript": "^5.9.2",
     "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "@polkadot/dev": "^0.83.3",
+    "@polkadot/types": "^16.4.3",
+    "@types/jest": "^30.0.0",
+    "jest": "^30.1.3",
+    "jest-ts-webcompat-resolver": "^1.0.1",
+    "ts-jest": "^29.4.4",
+    "ts-node": "^10.9.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --transformIgnorePatterns \"node_modules/(?!@polkadot/api/allow-react)/\" --env=jsdom",
+    "test": "ts-node node_modules/jest/bin/jest.js",
     "local": "REACT_APP_LOCAL=enabled yarn start",
     "local:mock": "REACT_APP_LOCAL=enabled REACT_APP_MOCKING=enabled yarn start",
     "local-chain-remote-ipfs": "REACT_APP_LOCAL_CHAIN_REMOTE_IPFS=enabled yarn start",
